--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: "Outfit", sans-serif;
 }
+
 .container {
     display: flex;
     align-items: center;
@@ -11,76 +12,98 @@
     height: 100vh;
     background-color: #0D192C;
 }
+
 .box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 350px;
     height: 596px;
     border-radius: 15px;
     box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.10);
     background-color: #15263F;
-    padding: 24px;
 }
-.picture {  
+
+.picture {
     width: 302px;
     height: 302px;
     border-radius: 37px;
-    
+    cursor: pointer;
+    transition: opacity 0.15s;
 }
+
+.picture:hover {
+    opacity: 0.5;
+    background-color: #00FFF8;
+}
+
 .text1 {
-    display: flex;
-    justify-content: flex-start;
     width: 100%;
     font-size: 22px;
     color: white;
-    margin-top: 24px;
-    
+    margin-left: 24px;
+    cursor: pointer;
+    transition: color 0.15s;
 }
+
+.text1:hover {
+    color: #00FFF8;
+}
+
 .text2 {
-    display: flex;
-   font-size: 18px;
+    font-size: 18px;
     font-weight: 300px;
     line-height: 26px;
     color: #8BACD9;
-    margin-top: 16px;
+    margin-left: 24px;
+    width: 100%;
 }
+
 .row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 24px;
     width: 100%;
 }
 
 .left {
     display: flex;
     align-items: center;
+    margin-left: 10px;
 }
+
 .right {
     display: flex;
     align-items: center;
+    margin-right: 10px;
 }
+
 .line {
     height: 1px;
     width: 302px;
     background-color: #2E405A;
-    margin-top: 24px;
 }
+
 .row2 {
     display: flex;
     flex-direction: row;
-    align-items:center ;
+    align-items: center;
     justify-content: flex-start;
     width: 100%;
-    margin-top: 16px;
+    margin-left: 24px;
 }
+
 .text5 {
-
-    margin-top: 24px;
+    margin-left: 16px;
 }
-.text6 {
-    margin-top: 24px;
 
+.text6 {
+    color: white;
+    cursor: pointer;
+    transition: color 0.15s;
+}
+
+.text6:hover {
+    color: #00fff8;
 }
